cabal-version: 2.2
name: cardvalidator
version: 0.0.0.1
synopsis: Validate card using luhn algorithm
description: Some cool scotty implementation when you can validate your card using the luhn algorithm.
common common
  build-depends:
      base >= 4.13
  default-language:
      Haskell2010
  ghc-options:
      -Wall
library
  import:
      common
  hs-source-dirs:
      src
  exposed-modules:
      ValidateCard,
      Luhn
  build-depends:
      blaze-html >= 0.9,
      containers,
      text,
      scotty >= 0.11
executable cardvalidator
  import:
      common
  hs-source-dirs:
      app
  main-is:
      Main.hs
  build-depends:
      cardvalidator